[package]
name = "rboy"
version = "0.1.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>" ]
edition = "2018"

[dependencies]
blip_buf = ">=0.1.3"
clap = "4"
cpal = "0.15"
glium = "0.34"
winit = "0.29"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "json"]}
serde = { version = "1", features = ["derive"] }
anyhow = "1"
image = "0.25.0"


[[bin]]
name = "rboy"
test = false
doc = false
